[gd_scene load_steps=6 format=3 uid="uid://cwcfvm81lh4hr"]

[ext_resource type="Script" path="res://Scenes/Towers/tower_picker.gd" id="1_3g165"]
[ext_resource type="Texture2D" uid="uid://cyc7lktwdjeg7" path="res://Assets/Assets_towers/Пустое_место_иконка.png" id="2_3542m"]
[ext_resource type="Texture2D" uid="uid://bqbic4hi7ceem" path="res://Assets/Assets_towers/иконка_кристал.png" id="3_dkmul"]
[ext_resource type="Texture2D" uid="uid://bv5nth4hudewl" path="res://Assets/Assets_towers/иконка балиста.png" id="4_egxuf"]
[ext_resource type="Texture2D" uid="uid://mfjurv2sxdii" path="res://Assets/Assets_towers/иконка тмена 32х32.png" id="5_e0blk"]

[node name="TowerPicker" type="Node2D"]
script = ExtResource("1_3g165")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_3542m")

[node name="ActivedButton" type="Button" parent="."]
visibility_layer = 0
offset_left = -32.0
offset_top = -32.0
offset_right = 32.0
offset_bottom = 32.0
mouse_default_cursor_shape = 2

[node name="CrystalButton" type="Button" parent="."]
visible = false
offset_left = -32.0
offset_bottom = 32.0
mouse_default_cursor_shape = 2
icon = ExtResource("3_dkmul")
flat = true

[node name="BallistaButton" type="Button" parent="."]
visible = false
offset_left = -5.0
offset_top = -34.0
offset_right = 35.0
offset_bottom = 6.0
mouse_default_cursor_shape = 2
icon = ExtResource("4_egxuf")
flat = true

[node name="StatueButton" type="Button" parent="."]
visible = false
offset_left = -32.0
offset_top = -32.0
mouse_default_cursor_shape = 2
text = "S"

[node name="BackButton" type="Button" parent="."]
visible = false
offset_left = -4.0
offset_top = -4.0
offset_right = 36.0
offset_bottom = 36.0
mouse_default_cursor_shape = 2
icon = ExtResource("5_e0blk")
flat = true

[connection signal="pressed" from="ActivedButton" to="." method="_on_actived_button_pressed"]
[connection signal="pressed" from="CrystalButton" to="." method="_on_crystal_button_pressed"]
[connection signal="pressed" from="BallistaButton" to="." method="_on_ballista_button_pressed"]
[connection signal="pressed" from="StatueButton" to="." method="_on_statue_button_pressed"]
[connection signal="pressed" from="BackButton" to="." method="_on_back_button_pressed"]
